<resources>
    <string name="app_name">Material 3 Theme</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttons">Buttons</string>
    <string name="button">Button</string>
    <string name="textbutton">TextButton</string>
    <string name="textbutton_dialog">TextButton.Dialog</string>
    <string name="textbutton_dialog_flush">TextButton.Dialog.Flush</string>
    <string name="textbutton_snackbar">TextButton.Snackbar</string>
    <string name="outlined">Outlined</string>
    <string name="outlinedbutton_icon">OutlinedButton.Icon</string>
    <string name="elevatedbutton">ElevatedButton</string>
    <string name="unelevatedbutton">UnelevatedButton</string>
    <string name="tonalbutton">TonalButton</string>
    <string name="tonalbutton_icon">TonalButton.Icon</string>
    <string name="iconbutton">IconButton</string>
    <string name="iconbutton_outlined">IconButton.Outlined</string>
    <string name="iconbutton_filled">IconButton.Filled</string>
    <string name="iconbutton_filled_tonal">IconButton.Filled.Tonal</string>
    <string name="outlinedbutton">OutlinedButton</string>
    <string name="elevatedbutton_icon">ElevatedButton.Icon</string>
    <string name="cardview">CardView</string>
    <string name="materialcardview">MaterialCardView</string>
    <string name="materialcardview_elevated">MaterialCardView.Elevated</string>
    <string name="materialcardview_filled">MaterialCardView.Filled</string>
    <string name="materialcardview_outlined">MaterialCardView.Outlined</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="tertiary">Tertiary</string>
    <string name="surface">Surface</string>
    <string name="large_primary">Large.Primary</string>
    <string name="large_secondary">Large.Secondary</string>
    <string name="large_tertiary">Large.Tertiary</string>
    <string name="large_surface">Large.Surface</string>
    <string name="checkbox">Checkbox</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="chips">Chips</string>
    <string name="alpha_input">Alpha (Input)</string>
    <string name="bravo_filter">Bravo (Filter)</string>
    <string name="charlie_assist">Charlie (Assist)</string>
    <string name="delta_suggestion">Delta (Suggestion)</string>
    <string name="echo_input_elevated">Echo (Input.Elevated)</string>
    <string name="foxtrot_input_icon">Foxtrot (Input.Icon)</string>
    <string name="foxtrot_input_icon_elevated">Foxtrot (Input.Icon.Elevated)</string>
    <string name="golf_filter_elevated">Golf (Filter.Elevated)</string>
    <string name="hotel_assist_elevated">Hotel (Assist.Elevated)</string>
    <string name="india_suggestion_elevated">India (Suggestion.Elevated)</string>
    <string name="switches">Switches</string>
    <string name="alpha">Alpha</string>
    <string name="bravo">Bravo</string>
    <string name="slider">Slider</string>
    <string name="radiobutton">RadioButton</string>
    <string name="label_1">Label 1</string>
    <string name="label_2">Label 2</string>
    <string name="label_3">Label 3</string>
    <string name="label_4">Label 4</string>
    <string name="label_5">Label 5</string>
    <string name="progressbar">Progressbar</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="search_something">Search something</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dynamic_colors">Dynamic Colors</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="true_black">True Black</string>
    <string name="change_theme">Change theme</string>
</resources>