<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <!--    <com.google.android.material.card.MaterialCardView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_draggable="@bool/dynamic_theme"
        app:behavior_halfExpandedRatio=".5"
        app:behavior_hideable="true"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/bottomSheetDragHandleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/theme"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/bottomSheetDragHandleView"
            app:layout_constraintStart_toStartOf="@+id/bottomSheetDragHandleView"
            app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/theme_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/auto_theme"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_default" />

            <Button
                android:id="@+id/light_theme"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light" />

            <Button
                android:id="@+id/dark_theme"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dark" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/dynamic_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/dynamic_colors"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/theme_group"
            app:layout_constraintStart_toStartOf="@+id/theme_group"
            app:layout_constraintTop_toBottomOf="@+id/theme_group" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/dynamic_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/dynamic_color_label"
            app:layout_constraintStart_toStartOf="@+id/dynamic_color_label"
            app:layout_constraintTop_toBottomOf="@+id/dynamic_color_label"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/dynamic_on"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on" />

            <Button
                android:id="@+id/dynamic_off"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/true_black_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/true_black"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/dynamic_group"
            app:layout_constraintStart_toStartOf="@+id/dynamic_group"
            app:layout_constraintTop_toBottomOf="@+id/dynamic_group" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/true_black_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/true_black_label"
            app:layout_constraintStart_toStartOf="@+id/true_black_label"
            app:layout_constraintTop_toBottomOf="@+id/true_black_label"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/true_black_on"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on" />

            <Button
                android:id="@+id/true_black_off"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_theme"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/change_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/true_black_group"
            app:layout_constraintStart_toStartOf="@+id/true_black_group"
            app:layout_constraintTop_toBottomOf="@+id/true_black_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--    </com.google.android.material.card.MaterialCardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>